# vst-plugins-monorepo

./: .gitattributes  .gitignore  PACKAGING.md  README.md  WARP.md
.github/workflows/: ci-limiter.yml  ci-reverb.yml  ci.yml  release-limiter.yml  release-reverb.yml  release.yml
CommonUI/: CMakeLists.txt
CommonUI/include/Controls/: FilmstripSlider.h  LogoHeader.h  StereoLinkedBars.h  VerticalMeter.h
CommonUI/include/Foundation/: Card.h
CommonUI/include/Styling/: LookAndFeels.h  Theme.h
CommonUI/src/Foundation/: Filmstrip.cpp  ResourceResolver.cpp
HungryGhostLimiter/: CMakeLists.txt  HungryGhostLimiter.jucer
HungryGhostLimiter/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
HungryGhostLimiter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
HungryGhostLimiter/Source/Styling/: LookAndFeels.cpp  LookAndFeels.h  Theme.cpp  Theme.h
HungryGhostLimiter/Source/UI/: AdvancedPanel.h  Ceiling.h  Controls.cpp  Controls.h  InputTrimSection.h  KitStripSlider.cpp  KitStripSlider.h  Layout.h  Meter.cpp  Meter.h  OutputMeters.h  ReleaseSection.h  StereoLinkedBars.h  Threshold.cpp  Threshold.h
HungryGhostLimiter/Source/UI/columns/: ControlsColumn.h  InputsColumn.h  MeterColumn.h  OutputColumn.h  ThrCeilColumn.h
HungryGhostLimiter/Source/UI/foundation/: Card.cpp  Card.h  Filmstrip.h  ResourceResolver.h  Typography.cpp  Typography.h
HungryGhostLimiter/Source/UI/sections/: LogoHeader.h
HungryGhostLimiter/Source/dsp/: LimiterDSP.cpp  LimiterDSP.h
HungryGhostLimiter/tests/: DomainTests.cpp  RunAllTests.cpp
assets/blender/vsts/: spectral-limiter.blend  spectral-limiter.blend1
assets/blender/vsts/assets/materials/black-metal-with_f41f46fa-4c96-4629-9ec1-069e2e529a3c/: black-metal-with-holes_1K_be0b7cb7-3065-492f-9718-bc0480acf295.blend
docs/readme/: astral-halls.md  hungry-ghost-multiband-limiter.md  spectral-limiter.md
docs/research/: multi-band-compressor.md  reverb-refactor.md  reverb.md  saturation.md  valhalla-inspired-algorithm.md
packaging/: .gitignore
packaging/macos/scripts/: build_bundle.sh  build_pkg.sh
packaging/shared/: EULA.rtf  plugins.json
packaging/windows/scripts/: build_bundle.ps1  build_msi.ps1  sign.ps1
packaging/windows/templates/: bundle.wxs  plugin.msi.wxs
scripts/: package_all_macos.sh  package_all_windows.ps1
src/CommonAudio/: CMakeLists.txt
src/CommonAudio/include/: CommonAudio.h
src/CommonAudio/include/audio/: StemPlayer.h
src/CommonUI/: CMakeLists.txt
src/CommonUI/include/: CommonUI.h
src/CommonUI/include/Charts/: CompressorChart.h  MBCLineChart.h
src/CommonUI/include/Controls/: DropZone.h  StemSelector.h  TransportBar.h  VerticalMeter.h
src/CommonUI/include/Foundation/: Card.h  Filmstrip.h  ResourceResolver.h  Typography.h
src/CommonUI/include/Layout/: Defaults.h
src/CommonUI/include/Styling/: LookAndFeels.h  Theme.h
src/HungryGhostLimiter/: CMakeLists.txt  HungryGhostLimiter.jucer
src/HungryGhostLimiter/Builds/VisualStudio2022/: HungryGhostLimiter.sln  HungryGhostLimiter_SharedCode.vcxproj  HungryGhostLimiter_SharedCode.vcxproj.filters  HungryGhostLimiter_StandalonePlugin.vcxproj  HungryGhostLimiter_VST3.vcxproj  HungryGhostLimiter_VST3ManifestHelper.vcxproj  resources.rc
src/HungryGhostLimiter/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JucePluginDefines.h
src/HungryGhostLimiter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
src/HungryGhostLimiter/Source/dsp/: LimiterDSP.h
src/HungryGhostLimiter/Source/ui/: AdvancedPanel.h  Ceiling.h  Controls.cpp  Controls.h  InputTrimSection.h  Meter.cpp  Meter.h  OutputMeters.h  SettingsPanel.h  Threshold.cpp  Threshold.h
src/HungryGhostLimiter/Source/ui/columns/: InputsColumn.h
src/HungryGhostLimiter/Source/ui/sections/: AdvancedControls.h  LogoHeader.h
src/HungryGhostLimiter/tests/: LimiterDSPTests.cpp  ParameterLayoutTests.cpp
src/HungryGhostMultibandCompressor/: CMakeLists.txt
src/HungryGhostMultibandCompressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/HungryGhostMultibandCompressor/Source/dsp/: BandSplitterIIR.h  CompressorBand.h  Utilities.h
src/HungryGhostMultibandCompressor/tests/: HGMBCTests_DSP.cpp
src/HungryGhostMultibandLimiter/: CMakeLists.txt  STORY-MBL-002-DSP-IMPLEMENTATION.md
src/HungryGhostMultibandLimiter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/HungryGhostMultibandLimiter/Source/dsp/: BandSplitterIIR.h  LimiterBand.h  LinkwitzRileyCrossover.h  Utilities.h
src/HungryGhostMultibandLimiter/Source/ui/: GRMeter.h  MetersPanel.h
src/HungryGhostMultibandLimiter/tests/: MultibandLimiterDSPTests.cpp
src/HungryGhostReverb/: CMakeLists.txt
src/HungryGhostReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/HungryGhostReverb/Source/DSP/: Allpass.h  DampingFilter.h  DelayLine.h  FDN.h  Modulator.h  ParameterTypes.h  ReverbEngine.h
src/HungryGhostSaturation/: CMakeLists.txt
src/HungryGhostSaturation/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dummy.h
src/HungryGhostSaturation/Source/ui/: StyledCombo.h  StyledKnob.h
src/MusicGPTClient/: CMakeLists.txt
src/MusicGPTClient/include/: ExtractionClient.h  ExtractionConfig.h  ExtractionJob.h  MusicGPTClient.h
src/MusicGPTClient/src/: CurlHttpClient.cpp  CurlHttpClient.h  ExtractionClient.cpp  JsonParser.cpp  JsonParser.h
src/MusicGPTExtractor/: CMakeLists.txt
src/MusicGPTExtractor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/MusicGPTExtractor/Source/api/: ExtractionClient.cpp  ExtractionClient.h
src/MusicGPTExtractor/Source/audio/: StemPlayer.cpp  StemPlayer.h
src/MusicGPTExtractor/Source/ui/: CreditConfirmDialog.h  Layout.h  SettingsPanel.h  StemTrackList.h
tools/intaller/: README.md
tools/intaller/macos/: mkpkg.sh
tools/intaller/windows/: Setup.iss
(+23 files in other folders)
